Fix jumping header when scroll

--- a/app/src/blocks/top.scss
+++ b/app/src/blocks/top.scss
@@ -4,6 +4,7 @@
 	border-bottom: 1px solid $color-lighter;
 	font-size: 1.8rem;
 	z-index: 50;
+	transform: translate3d(0, 0, 0);
 
 	&__left {
 		float: left;
